[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "getBISy"
authors = [
    {name = "Matthew Potts", email = "matthew-potts@live.com"}
]
description = "package description"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = {file = "requirements.txt"}
