[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "getBISy"
authors = [
    {name = "Matthew Potts", email = "matthew-potts@live.com"}
]
description = "package description"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["dependencies"]

[tools.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
